--- a/boilerplate-npm-main/package.json
+++ b/boilerplate-npm-main/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "Marvin Kurland",
+	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
@@ -7,6 +7,7 @@
 	"scripts": {
 		"start": "node server.js"
 	},
+  "author": "Marvin Kurland",
 	"repository": {
 		"type": "git",
 		"url": "https://idontknow/todo.git"
