adding author to package.json file

--- a/package.json
+++ b/package.json
@@ -14,5 +14,7 @@
   "description": "[![Run on Repl.it](https://repl.it/badge/github/freeCodeCamp/boilerplate-npm)](https://repl.it/github/freeCodeCamp/boilerplate-npm)",
   "version": "1.0.0",
   "license": "ISC",
-  "author": "Marvin Kurland"
+  "author": {
+  "name": "Marvin Kurland"
+  }
 }
