--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "fcc-learn-npm-package-json",
+  "author": "Marvin Kurland",
   "dependencies": {
     "express": "^4.14.0"
   },
@@ -13,8 +14,5 @@
   },
   "description": "[![Run on Repl.it](https://repl.it/badge/github/freeCodeCamp/boilerplate-npm)](https://repl.it/github/freeCodeCamp/boilerplate-npm)",
   "version": "1.0.0",
-  "license": "ISC",
-  "author": {
-  "name": "Marvin Kurland"
-  }
+  "license": "ISC"
 }
